--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "^3.12.5",
     "vue": "^3.2.13",
+    "vue3-carousel": "^0.3.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
